fixed social outline but now it's not centered

--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,11 @@ body {
     background-color: hsl(257, 40%, 49%);
     font-family: "Poppins", sans-serif;
     color: #fff;
+    font-weight: 400;
 }
-
+h1 {
+    font-weight: 600;
+}
 nav {
     padding: 20px;
 }
@@ -30,6 +33,7 @@ nav {
       padding: 15px;
       color:  hsl(257, 40%, 49%);
       font-size: 16px;
+      font-weight: 400;
       box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
   }
 
@@ -47,10 +51,27 @@ nav {
   }
 
   footer {
-      display: grid;
+      display: flex;
       justify-self: right;
       padding-right: 40px;
   }
+
+  a{
+      color: white;
+  }
+  a:hover {
+      color: hsl(300, 69%, 71%);
+  }
+
+  .fab {
+      border-radius: 50%;
+      border: 1px solid #fff;
+      padding: 10px;
+      margin: 10px;
+  }
+
+
+ /* Styling for smaller screen */ 
 @media (max-width:375px) {
     body {
     background-image: url(images/bg-mobile.svg);
@@ -58,11 +79,29 @@ nav {
     background-size: cover;
     height: 1vh;
     }
+    .logo {
+        max-width: 150px;
+    }
+    .text {
+        text-align: center;
+        padding-top: 30px;
+    }
+    h1 {
+        font-size: 24px;
+    }
+    button {
+        width: 60%;
+        font-size: 14px;
+        padding: 10px;
+        margin-top: 20px;
+    }
+    
     footer {
-        display: grid;
-        justify-self: center;
+        display: flex;
+        margin-top: 30px;
     }
 }
+ /* Styling for larger screens */ 
 @media (min-width:376px) and (max-width:1440px) {
     body {
     background-image: url(images/bg-desktop.svg);
